--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first github reop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can push to github</h1>
     <h2>Mama i can code now</h2>
     <h3>New code change</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tenetur mollitia iure culpa delectus impedit possimus? Tempora repellendus, ea, odit provident nesciunt accusamus nam consequuntur nemo enim, natus aut. Nobis aperiam obcaecati quam. Dignissimos animi molestias quas placeat, explicabo voluptatibus. Illo aspernatur quidem sit facilis iste saepe laborum blanditiis labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eius totam quas, et, laudantium labore earum vero facere autem mollitia eligendi, odit amet aliquid ipsum! Ipsum possimus culpa ipsa temporibus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium exercitationem nam ipsa inventore quasi. Odio id deleniti exercitationem quaerat quo quibusdam ut ab deserunt libero! Molestias accusamus quibusdam eligendi deleniti ducimus distinctio ex similique aspernatur aliquid accusantium porro recusandae ut voluptatibus perferendis sint debitis ullam vel, soluta maiores cum odio natus repudiandae sunt. Architecto consequatur commodi deserunt asperiores porro tenetur quo at, necessitatibus placeat, reiciendis perspiciatis totam minima! Facilis iure nobis delectus earum, inventore, totam incidunt dicta eos possimus ratione soluta laborum repudiandae ex debitis esse ea! Harum similique omnis, velit a corrupti, libero totam quos laboriosam aspernatur minus sequi!lorem100 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident odit ad dignissimos quia alias quasi, amet enim aliquid numquam nisi molestiae et ipsam deleniti voluptates, quos dolor neque eaque totam rerum soluta aspernatur est distinctio. Veritatis mollitia omnis nam rem fugiat debitis vero repudiandae fugit velit? Voluptas voluptatibus provident molestiae! Ipsa, nostrum facere? Commodi quaerat earum doloremque architecto voluptatem, totam obcaecati rem fugiat accusamus iure sit dolores recusandae quos facilis consequuntur labore ipsum deserunt quibusdam modi! Blanditiis, et? Eligendi omnis dolore neque numquam molestias dolorem sapiente a nihil aut adipisci pariatur doloribus sint repellendus quam qui magni, odio tempora perspiciatis!
+    </p>
 </body>
 </html>
