pratice by git bush

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <h1>These images adding after hosting</h1>
     <img src="img3.jpg" alt="">
     <img src="img4.jpg" alt="">
+    <h4>These image is added to practice git bush</h4>
+    <img src="img1.jpg" alt="">
 </body>
 </html>
